# dev-templates

./: bash.sh  conda_mirror.sh  fish.sh  miniconda.sh  pip_mirror.sh  pyproject.toml  softwares.sh  sshd_config  ubuntu2404.sh
ai/: docker.sh  uv_mirror.sh
bash/: bash.sh  bash_functions
docs/faults/: apt.md
faults/: conda.md  pip.md  uv.md
fish/: fish.sh
fish/functions/: proxy_off.fish  proxy_on.fish  proxy_status.fish
ftp/: vsftpd.conf
optional/: .env  ollama.sh
ssh/: ssh_keygen.sh  sshd_config  sshkey-autogen-client.sh  sshkey-autogen-server.sh
vibe-rules/: arch.md  code.md  dependences.md  tools.md
